MDEV-25664: Potential hang in purge when virtual indexed columns exist

ha_innobase::open(): Avoid accessing the clustered index root page when
the table is being opened by the purge subsystem.
Purge may already hold a latch on the root page, and S-latches are
not recursive!